; ModuleID = '/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_nand_macronix.c_macronix_nand_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mtd/nand/raw/extr_nand_macronix.c_macronix_nand_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nand_chip = type { i32 }

@NAND_BBM_FIRSTPAGE = common dso_local global i32 0, align 4
@NAND_BBM_SECONDPAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nand_chip*)* @macronix_nand_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @macronix_nand_init(%struct.nand_chip* %0) #0 {
  %2 = alloca %struct.nand_chip*, align 8
  store %struct.nand_chip* %0, %struct.nand_chip** %2, align 8
  %3 = load %struct.nand_chip*, %struct.nand_chip** %2, align 8
  %4 = call i64 @nand_is_slc(%struct.nand_chip* %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %1
  %7 = load i32, i32* @NAND_BBM_FIRSTPAGE, align 4
  %8 = load i32, i32* @NAND_BBM_SECONDPAGE, align 4
  %9 = or i32 %7, %8
  %10 = load %struct.nand_chip*, %struct.nand_chip** %2, align 8
  %11 = getelementptr inbounds %struct.nand_chip, %struct.nand_chip* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = or i32 %12, %9
  store i32 %13, i32* %11, align 4
  br label %14

14:                                               ; preds = %6, %1
  %15 = load %struct.nand_chip*, %struct.nand_chip** %2, align 8
  %16 = call i32 @macronix_nand_fix_broken_get_timings(%struct.nand_chip* %15)
  %17 = load %struct.nand_chip*, %struct.nand_chip** %2, align 8
  %18 = call i32 @macronix_nand_onfi_init(%struct.nand_chip* %17)
  ret i32 0
}

declare dso_local i64 @nand_is_slc(%struct.nand_chip*) #1

declare dso_local i32 @macronix_nand_fix_broken_get_timings(%struct.nand_chip*) #1

declare dso_local i32 @macronix_nand_onfi_init(%struct.nand_chip*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
